{
    "name": "TouchActions",
    "maps": [
        {
            "name": "MainMenu",
            "id": "a3e366f3-3f72-4792-9422-f3ad7cd6c01f",
            "actions": [
                {
                    "name": "SaveButton",
                    "type": "Button",
                    "id": "173e0fb5-fd5a-423a-9784-b671639dabd9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetButton",
                    "type": "Button",
                    "id": "67f7c76b-3565-4144-ba0d-159371018f8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitButton",
                    "type": "Button",
                    "id": "62af76cd-e9cf-491b-b50c-b81f06de7fcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21b07466-8a68-403b-a0dd-5c1b7f92e886",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaveButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed6c403c-5176-4032-928d-b7da637bcc1d",
                    "path": "<Keyboard>/end",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6033e6ed-a6be-40fc-b61a-7e788af52429",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GenMenu",
            "id": "96d90d2b-401d-4745-8130-23b1bb930c4c",
            "actions": [
                {
                    "name": "Crate",
                    "type": "Button",
                    "id": "4e71cef8-9342-4bc3-a801-002b58884528",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bush",
                    "type": "Button",
                    "id": "8ad0a234-cfdc-48c4-b6e0-be271d94b73e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Slabs",
                    "type": "Button",
                    "id": "9c4d2efa-472b-4f30-983b-f3ab87a7b712",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rock",
                    "type": "Button",
                    "id": "03caf8f8-d9d7-421f-a240-e0c7677d0250",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GolfBall",
                    "type": "Button",
                    "id": "1f229b41-9364-4305-9171-4fdad2dcdf36",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GolfHole",
                    "type": "Button",
                    "id": "f645a3aa-f299-4fdd-b354-a26bef9d17ae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RefPaper",
                    "type": "Button",
                    "id": "aab93782-df2b-4b5b-9d06-d49dd7f84df9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "f0490599-984c-4374-af5c-5bc52e8b5e3e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "092cd747-a8e7-4baa-bd39-d67f1dddeb02",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MainMenuButton",
                    "type": "Button",
                    "id": "1e2f8511-d84c-41e0-bbdb-8a082a082a76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53447533-e478-4ce4-ad33-8f5a5244aedb",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fad97fa-37f9-4a73-8b64-b45f85b97b53",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Bush",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d918e83-095b-49e2-aaeb-437746948516",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slabs",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eed16d5f-87a2-456f-a0bc-657f884297e4",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52c779c5-641e-484a-b9df-8b5dc3208f12",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GolfBall",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7129accc-eff7-4fec-9aef-891c4c306b5a",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GolfHole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05a1d456-9e85-4cfa-bd41-c3f886f1e627",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RefPaper",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b39f062d-a80a-4223-aa86-1250148b1e52",
                    "path": "<Keyboard>/f2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5aba1c7-da58-44ec-9ced-cfc4f93a0b23",
                    "path": "<Keyboard>/f3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31d6ffc3-dc3c-4857-863f-481adbf63395",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainMenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ManipMenu",
            "id": "dc31704a-c6bc-415e-aba2-a2200df126ce",
            "actions": [
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "93712886-b69d-45ad-8a5c-71e824e2e46c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "620b2ed0-044a-4fc7-8de2-63d3dd91e320",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "8ab37488-46a5-49d0-a26f-63511782683d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a1b19ef-ecaa-4e03-886a-59fef2cf8334",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "967e5a5f-25c5-4909-9140-5eca5d34e52c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b46792d-6556-41c3-81b3-3823255872f2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlacementMenu",
            "id": "5663de01-cf19-4726-9bbf-de8c038b9251",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "3a8c3e04-d0c0-4023-8de3-253a7da382b3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42eca819-504b-4a13-85cf-c0627f13bb45",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}